# countdown-event

./: .env  .gitignore  README.md  pyproject.toml
countdown_event/: __init__.py
examples/: example1.py  example2.py
tests/: test_countdown_event.py
